<resources>
    <string name="app_name">PaletteWithPicassoDemo</string>
    <string name="loreipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="vibrant_color">Vibrant Color</string>
    <string name="vibrant_color_dark">Vibrant Color Dark</string>
    <string name="vibrant_color_light">Vibrant Color Light</string>
    <string name="muted_color">Muted Color</string>
    <string name="muted_color_dark">Muted Color Dark</string>
    <string name="muted_color_light">Muted Color Light</string>

</resources>
