<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.project.andredantas.palettewithpicassodemo.SongActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="56dp"
        app:titleTextColor="@android:color/white" />

        <ScrollView
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/album_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrant_color"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/vibrant_color"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_dark"
                                android:id="@+id/vibrant_color_text_vibrant_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_light"
                                android:id="@+id/vibrant_color_text_vibrant_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color"
                                android:id="@+id/vibrant_color_text_muted_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_dark"
                                android:id="@+id/vibrant_color_text_muted_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_light"
                                android:id="@+id/vibrant_color_text_muted_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrant_color_dark"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/vibrant_color_dark"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color"
                                android:id="@+id/vibrant_color_dark_text_vibrant_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_light"
                                android:id="@+id/vibrant_color_dark_text_vibrant_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color"
                                android:id="@+id/vibrant_color_dark_text_muted_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_dark"
                                android:id="@+id/vibrant_color_dark_text_muted_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_light"
                                android:id="@+id/vibrant_color_dark_text_muted_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrant_color_light"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/vibrant_color_light"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color"
                                android:id="@+id/vibrant_color_light_text_vibrant_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_dark"
                                android:id="@+id/vibrant_color_light_text_vibrant_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color"
                                android:id="@+id/vibrant_color_light_text_muted_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_dark"
                                android:id="@+id/vibrant_color_light_text_muted_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_light"
                                android:id="@+id/vibrant_color_light_text_muted_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/muted_color"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/muted_color"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color"
                                android:id="@+id/muted_color_text_vibrant_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_dark"
                                android:id="@+id/muted_color_text_vibrant_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_light"
                                android:id="@+id/muted_color_text_vibrant_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_dark"
                                android:id="@+id/muted_color_text_muted_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_light"
                                android:id="@+id/muted_color_text_muted_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/muted_color_dark"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/muted_color_dark"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color"
                                android:id="@+id/muted_color_dark_text_vibrant_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_dark"
                                android:id="@+id/muted_color_dark_text_vibrant_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_light"
                                android:id="@+id/muted_color_dark_text_vibrant_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color"
                                android:id="@+id/muted_color_dark_text_muted_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_light"
                                android:id="@+id/muted_color_dark_text_muted_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/muted_color_light"
                        android:textColor="@color/cardview_dark_background" />

                    <RelativeLayout
                        android:id="@+id/muted_color_light"
                        android:layout_width="match_parent"
                        android:layout_height="160dp">

                        <LinearLayout
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color"
                                android:id="@+id/muted_color_light_text_vibrant_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_dark"
                                android:id="@+id/muted_color_light_text_vibrant_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/vibrant_color_light"
                                android:id="@+id/muted_color_light_text_vibrant_color_light"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color"
                                android:id="@+id/muted_color_light_text_muted_color"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_marginBottom="5dp"
                                android:text="@string/muted_color_dark"
                                android:id="@+id/muted_color_light_text_muted_color_dark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>



        </ScrollView>


</RelativeLayout>
